c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/return_void_as_pointer.c
void *x(void) {
  // you can't implicitly convert a void expression to another type
  return (void)0;
}
